log
Fri Mar 26 19:30:23 UTC 2021: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:0:
test.c: In function ‘createList’:
list.c:33:14: error: ‘lista’ is used uninitialized in this function [-Werror=uninitialized]
   lista->head=NULL;
              ^
cc1: all warnings being treated as errors
Compilation failed
Fri Mar 26 19:32:25 UTC 2021: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|6
total_score: 0/70
7d89a2f
Fri Mar 26 19:32:41 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0a1ba34
Fri Mar 26 19:33:27 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
abf424f
Fri Mar 26 19:36:16 UTC 2021: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
f1d4e14
Fri Mar 26 19:56:03 UTC 2021: 
 list.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
fbfdcee
Fri Mar 26 20:00:31 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
50411b7
Fri Mar 26 20:01:17 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2530710
Fri Mar 26 20:05:30 UTC 2021: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
aa97629
Fri Mar 26 20:11:29 UTC 2021: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  1|5
total_score: 10/70
6992d12
Fri Mar 26 20:15:12 UTC 2021: 
 list.c | 17 ++++++++---------
 1 file changed, 8 insertions(+), 9 deletions(-)
 tests:  1|5
total_score: 10/70
ec01d7d
Fri Mar 26 20:19:09 UTC 2021: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
31fad43
Fri Mar 26 20:39:09 UTC 2021: 
 list.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
115a7df
Fri Mar 26 21:16:50 UTC 2021: 
 list.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
5e541b5
Fri Mar 26 21:19:09 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f21918b
Fri Mar 26 21:19:49 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
20e2745
Fri Mar 26 21:20:43 UTC 2021: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
9e802ae
Fri Mar 26 21:24:15 UTC 2021: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
15ec36c
Fri Mar 26 21:24:36 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
becaf64
Fri Mar 26 21:28:47 UTC 2021: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
a7d997f
Fri Mar 26 21:29:33 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a8d09ab
Fri Mar 26 21:30:52 UTC 2021: 
 list.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 15/70
55535ad
Fri Mar 26 21:31:36 UTC 2021: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
9247ace
Fri Mar 26 21:33:35 UTC 2021: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  6|4
total_score: 25/70
145edca
Fri Mar 26 21:35:01 UTC 2021: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
57d0728
Sat Mar 27 17:11:19 UTC 2021: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  0|0
40a806d
Sat Mar 27 17:15:09 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
35b603c
Sat Mar 27 17:17:36 UTC 2021: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
25fa370
Sat Mar 27 17:19:10 UTC 2021: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
3e85368
Sat Mar 27 17:30:24 UTC 2021: 
 list.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  10|2
total_score: 45/70
57b783b
Sat Mar 27 17:31:14 UTC 2021: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 55/70
577a051
Sat Mar 27 17:37:04 UTC 2021: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|0
9ffbf0b
Sat Mar 27 17:39:38 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
9377699
Sat Mar 27 17:48:18 UTC 2021: 
 list.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  11|1
total_score: 55/70
8cbfc43
Sat Mar 27 17:53:17 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
902f94f
Sat Mar 27 17:54:24 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
4a0345f
